CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 1)
SET(VERSION_PATCH 0)
SET(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
ADD_DEFINITIONS(-DVERSION="${VERSION}")

PROJECT(ProceduralMazeGenerator VERSION ${VERSION} LANGUAGES CXX)

SET(CONSOLE_PROJECT_NAME ${PROJECT_NAME}Console)
SET(CONSOLE_LIBRARY_PROJECT_NAME ${PROJECT_NAME}ConsoleLibrary)
SET(CORE_PROJECT_NAME ${PROJECT_NAME}Core)
SET(TEST_PROJECT_NAME ${PROJECT_NAME}Test)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_SUBDIRECTORY(Console)
ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Test)