CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

PROJECT(${CONSOLE_PROJECT_NAME} VERSION 1.1.0 LANGUAGES CXX)

SET(ENTRY_POINT
		Source/Main.cpp)

ADD_LIBRARY(${CONSOLE_LIBRARY_PROJECT_NAME} STATIC ${ENTRY_POINT})
TARGET_INCLUDE_DIRECTORIES(${CONSOLE_LIBRARY_PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Include/)
TARGET_LINK_LIBRARIES(${CONSOLE_LIBRARY_PROJECT_NAME} PRIVATE ${CORE_PROJECT_NAME})

ADD_EXECUTABLE(${PROJECT_NAME} ${ENTRY_POINT})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Include/)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${CORE_PROJECT_NAME})

ADD_SUBDIRECTORY(Include)
ADD_SUBDIRECTORY(Source)