CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(${CORE_PROJECT_NAME} VERSION 1.1.0 LANGUAGES CXX)

ADD_LIBRARY(${PROJECT_NAME} STATIC)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Include/)

FIND_PACKAGE(OpenCV CONFIG REQUIRED)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})

ADD_SUBDIRECTORY(Include)
ADD_SUBDIRECTORY(Source)