CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(${RENDERER_PROJECT_NAME} VERSION 1.0.0 LANGUAGES CXX)

SET(ENTRY_POINT
		Source/Main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${ENTRY_POINT})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Include/)

FIND_PACKAGE(glfw3 CONFIG REQUIRED)
FIND_PACKAGE(glad CONFIG REQUIRED)
FIND_PACKAGE(glm CONFIG REQUIRED)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE glfw glad::glad glm::glm)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${CORE_PROJECT_NAME})

ADD_SUBDIRECTORY(Include)
ADD_SUBDIRECTORY(Source)