CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(${TEST_PROJECT_NAME} VERSION 1.0.0 LANGUAGES CXX)

SET(HEADER_FILES)

SET(SOURCE_FILES)

SET(ENTRY_POINT
		Source/Main.cpp)

ADD_EXECUTABLE(${TEST_PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${ENTRY_POINT})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Include/)

FIND_PACKAGE(GTest CONFIG REQUIRED)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE GTest::gtest GTest::gmock)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${CORE_PROJECT_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${CORE_PROJECT_NAME})